[package]
name = "log-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.7" }
tokio = { version = "1.18", features = ["full"] }
prost = "0.10"
prost-types = "0.10"
memmap = "0.7"
bytes = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.7"
