[package]
name = "log-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
bytes = "1"
anyhow = "1"
prost = "0.10"
protos = { path = "../protos" }
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
tempfile = "3"
